ChangeLog for the Astro project.

20140626:
	* eliminate the GuiderNewImageCallbackData, replaced by the revamped
	  ImageCallbackData class

20140625:
	* fix many warnings
	* add QsiGuiderPort implementation
	* complete the Ccd implementation of the Qsi camera
	* fix some typos
	* ensure instantiation of MinimumEstimator classes

20120117:
	* start the project

--
$Id$