@@ -16,95 +16,6 @@
 namespace astro {
 namespace guiding {
 
-#if 0
-
-/**
- * \brief Locking class to make locking more automatic
- */
-class GuidingLock {
-	pthread_mutex_t	*_mutex;
-public:
-	GuidingLock(pthread_mutex_t *mutex) : _mutex(mutex) {
-		if (pthread_mutex_lock(_mutex)) {
-			debug(LOG_DEBUG, DEBUG_LOG, 0, "locking fails: %s",
-				strerror(errno));
-		}
-	}
-	~GuidingLock() {
-		if (pthread_mutex_unlock(_mutex)) {
-			debug(LOG_DEBUG, DEBUG_LOG, 0, "");
-		}
-	}
-};
-
-class MainAccess;
-
-/**
- * \brief Class encapsulating the thread stuff
- */
-class ThreadBase {
-	pthread_t	thread;
-private:
-	pthread_cond_t	waitcond; // waiting
-	pthread_mutex_t	mutex;
-protected:
-	volatile bool	_isrunning;
-public:
-	bool	isrunning();
-protected:
-	/**
-	 * \brief Main method for the thread
-	 *
-	 * The thread will ultimately run this method from the run method
-	 * defined below. This allows the thread to perform some
-	 * initializations, e.g. the _isrunning and _terminate variables.
-	 */
-	virtual	void	main() = 0;
-private:
-	// The MainAccess adapter class gives access allows to get access
-	// to the protected main function from a C function
-	friend class RunAccess;
-	void	run();
-
-	// signaling boolean variable that can be use to signal the thread
-	// to terminate
-private:
-	volatile bool	_terminate;
-public:
-	bool	terminate() const { return _terminate; }
-private:	// prevent copying of this object
-	ThreadBase(ThreadBase& other);
-	ThreadBase&	operator=(ThreadBase& other);
-public:
-	ThreadBase();
-	~ThreadBase();
-	void	start();
-	void	stop();
-	bool	wait(double timeout);
-};
-typedef std::shared_ptr<ThreadBase>	ThreadPtr;
-
-/**
- * \brief Generic thread template
- *
- * This template implements the "mechanical" aspects of a thread. The work
- * is encapsulated in the Work template argument. A Work class must implement
- * the main method, which is called with the thread object as argument
- * The main function can use the thread object for synchronization and for
- * signaling.
- */
-template<typename Work>
-class GuidingThread : public ThreadBase {
-	Work&	_work;
-public:
-	GuidingThread(Work& work) : _work(work) { }
-protected:
-	virtual void	main() {
-		_work.main(*this);
-	}
-};
-#endif
-
 /**
  * \brief Guiding Process base class
  */
