@@ -20,5 +20,6 @@ noinst_HEADERS = PixelValue.h Simulator.h Sun.h Thread.h \
 	ViewerPipeline.h Testtable.h \
 	ImageDirectory.h TaskTable.h TrackingWork.h DrivingWork.h \
 	TrackingPersistence.h CalibrationPersistence.h \
-	TrackingStore.h CalibrationStore.h ImagePersistence.h
+	TrackingStore.h CalibrationStore.h ImagePersistence.h \
+	FocusWork.h FocusCompute.h
 
